syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "rpc/user/api/user/user.proto";

option go_package = "apiuser/api/user/v1;v1";

// The greeting service definition.
service ApiUser {
  rpc Register (user.RegisterRequest) returns (user.RegisterReply){
    option (google.api.http) = {
      post: "/auth/device/register"
      body: "*"
    };
  }

  rpc Auth (AuthRequestV1) returns (user.AuthReply){
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  };
}

message AuthRequestV1 {
  user.AuthRequest.LoginType login_type = 1;
  user.AuthRequest.MobileAuth by_mobile = 2;
  user.AuthRequest.ClientType client_type = 3;
}
